kong/kong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supabase-kong
  template:
    metadata:
      labels:
        app: supabase-kong
    spec:
      containers:
        - name: supabase-kong
          image: kong:2.8.1
          command: ["/bin/sh"]
          args: ["/scripts/wrapper.sh"]
          ports:
            - containerPort: 8000
            - containerPort: 8443
          volumeMounts:
            - name: config
              mountPath: /home/kong/temp.yml
              subPath: temp.yml
            - name: wrapper
              mountPath: /scripts/

      volumes:
        - name: config
          configMap:
            name: supabase-kong
            defaultMode: 0644
            items:
              - key: kong-conf.yaml
                path: temp.yml
        - name: wrapper
          configMap:
            name: supabase-kong
            defaultMode: 0755
            items:
              - key: kong-wrapper.sh
                path: wrapper.sh
