kong/kong-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: supabase-kong-service
spec:
  selector:
    app: supabase-kong
  ports:
    - protocol: TCP
      port: 8000
